recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:8: error: not found: value n
    forward(n)
            ^